--- a/starter.ipynb
+++ b/starter.ipynb
@@ -335,6 +335,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        clip_id  matched\n",
+      "0     0aqGcnTU9eI_78368_2_5_1_9        4\n",
+      "1    3zZf273fVFQ_136633_0_2_0_0        4\n",
+      "2     4JTzudL7dzU_48703_1_1_2_6        4\n",
+      "3    4LRex1G-Vso_179155_1_8_0_7        4\n",
+      "4    BBddrfyP5H4_149834_1_7_0_6        4\n",
+      "5    DEGBbYfng9s_129820_2_1_2_0        4\n",
+      "6    F7gRwwI3kdQ_269580_0_4_0_1        4\n",
+      "7   KWQhruVYqmQ_279980_2_5_1_10        4\n",
+      "8    TBEq6NYyCbA_165069_0_2_0_1        4\n",
+      "9    TFkD_pnL0mI_119570_1_7_0_7        4\n",
+      "10   UA0c21-R1XM_122260_0_0_1_2        4\n",
+      "11    Vhu4uQkgkiM_15940_0_4_0_1        4\n",
+      "12     YUDPwUSt54A_6735_1_3_0_9        4\n",
+      "13  YUQdnXQxS2Q_137555_1_6_1_10        4\n",
+      "14   c8UlabjQwxk_223911_0_7_2_9        4\n",
+      "15   d_QR8njk-sQ_421928_1_6_0_6        4\n",
+      "16   erVorM2Blzo_378053_1_4_1_4        4\n",
+      "17    gnbk3gvwOAE_23375_0_9_0_3        4\n",
+      "18   hM4FyJN7H40_261675_0_0_0_1        4\n",
+      "19   jP8ZrtLRqAU_233335_1_7_2_6        4\n",
+      "20   opozn-e9LjI_137911_1_9_1_6        4\n",
+      "21  rqtKD46ztLU_95717_1_10_0_10        4\n",
+      "22   s-60FN0vBjY_374590_1_3_1_1        4\n",
+      "23   sJ4lM5i0vFM_229590_2_5_0_0        4\n",
+      "24   vTieEPnVeWo_312239_0_3_1_1        4\n",
+      "25    w-dhvsaxUms_32565_1_3_0_1        4\n",
+      "26   wO2ybu30dM4_162270_0_2_1_1        4\n",
+      "27   xbrncKaDFVA_263783_1_1_1_1        4\n",
+      "28    zPpOeRfAzaQ_31220_1_3_0_1        4\n",
+      "29   zZUoG7Xx5N4_309700_2_5_0_4        4\n",
+      "clips with <2 names: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in a notebook or REPL\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"video_player_names_matched.csv\")\n",
+    "df[\"matched\"] = df[[\"player1\",\"player2\",\"player3\",\"player4\"]].astype(bool).sum(axis=1)\n",
+    "print(df[[\"clip_id\",\"matched\"]])\n",
+    "print(\"clips with <2 names:\", df[df.matched<2].clip_id.tolist())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
